[package]
name = "solana_event_listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version= "1", features = ["full"] }
dotenv = "0.15.0"
chrono = "0.4"
serde_json = "1.0.113"
solana-sdk = "1.18.11"
solana-client = "1.18.11"
solana-transaction-status = "1.18.11"
solana-zk-token-sdk = "1.18.11"
# aws-sdk-s3 = "1.14.0"
# aws-config = { version = "=1.2.0", features = ["behavior-version-latest"] }
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }

# aws-credential-types = { version = "1.2.0", features = ["hardcoded-credentials"] }


# Uncomment these to use patched crates
# solana-client = "2.0.0"
# solana-sdk = "2.0.0"
# solana-transaction-status = "2.0.0"
# solana-zk-token-sdk = "2.0.0"
aws-sdk-s3 = "1.23.0"
aws-config = "1.2.0"
aws-types = "1.2.0"
aws-sigv4 = "1.2.0"



subtle = "=2.4.1"
zeroize = "=1.3.0"

[patch.crates-io]
# solana-client = { git = "https://github.com/ConnorSaxon/solana.git", package = "solana-client"}
# solana-sdk = { git = "https://github.com/ConnorSaxon/solana.git" , package = "solana-sdk"}
# solana-transaction-status = { git = "https://github.com/ConnorSaxon/solana.git" ,package = "solana-transaction-status"}
# solana-program = { git = "https://github.com/ConnorSaxon/solana.git" ,package = "solana-program"}
# solana-zk-token-sdk = { git = "https://github.com/ConnorSaxon/solana.git" ,package = "solana-zk-token-sdk"}


aws-sdk-s3 =  { git = "https://github.com/ConnorSaxon/aws-sdk-rust.git" ,package = "aws-sdk-s3", rev = "9e910ce"}
aws-config =  { git = "https://github.com/ConnorSaxon/aws-sdk-rust.git" ,package = "aws-config", rev = "9e910ce"}
aws-types =  { git = "https://github.com/ConnorSaxon/aws-sdk-rust.git" ,package = "aws-types", rev = "9e910ce"}
aws-sigv4 =  { git = "https://github.com/ConnorSaxon/aws-sdk-rust.git" ,package = "aws-sigv4", rev = "9e910ce"}
