[package]
name = "s_3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version= "1", features = ["full"] }
aws-config = "1.1.4"
aws-sdk-s3 = "1.14.0"
tracing-subscriber = { version = "0.3.5", features = ["env-filter"] }
dotenv = "0.15.0"

subtle = "=2.5.0"